[gd_scene load_steps=22 format=3 uid="uid://yiun2ppakt6m"]

[ext_resource type="Script" path="res://02_scenes/01_characters/player.gd" id="1_oqx68"]
[ext_resource type="Texture2D" uid="uid://c57p1fyhpdlht" path="res://01_assets/01_sprites/basati.png" id="2_sbhjv"]
[ext_resource type="Texture2D" uid="uid://gnrpjujey081" path="res://01_assets/01_sprites/BST_pr_destello_01_v01.png" id="2_ss3ku"]
[ext_resource type="AudioStream" uid="uid://duvmf6thyi6ss" path="res://01_assets/03_sound/01_sfx/Hit.wav" id="3_og40d"]
[ext_resource type="Texture2D" uid="uid://4ohiqauxdwxw" path="res://01_assets/01_sprites/spritesheet_marcadorZii.png" id="4_f8dh2"]
[ext_resource type="Texture2D" uid="uid://dfy21rmbny8rb" path="res://01_assets/01_sprites/BST_pr_nube_01_v01.png" id="5_k7h10"]

[sub_resource type="Animation" id="Animation_n78im"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_og40d")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mehtc"]
resource_name = "dash"
length = 0.275
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.225, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_p2b76"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_og40d")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wmera"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_xovrn"]
resource_name = "jump_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_e7n8q"]
resource_name = "jump_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_15qly"]
resource_name = "run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("image:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahpo3"]
_data = {
"RESET": SubResource("Animation_n78im"),
"dash": SubResource("Animation_mehtc"),
"death": SubResource("Animation_p2b76"),
"idle": SubResource("Animation_wmera"),
"jump_down": SubResource("Animation_xovrn"),
"jump_up": SubResource("Animation_e7n8q"),
"run": SubResource("Animation_15qly")
}

[sub_resource type="Animation" id="Animation_mrrt1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrowPointer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0hb6k"]
resource_name = "pointer"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrowPointer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0oou"]
_data = {
"RESET": SubResource("Animation_mrrt1"),
"pointer": SubResource("Animation_0hb6k")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipqkr"]
size = Vector2(83, 87)

[sub_resource type="Gradient" id="Gradient_6xkpw"]
offsets = PackedFloat32Array(0, 0.377551, 0.816327, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0.42, 0.42, 0.42, 0.670588, 0.419608, 0.419608, 0.419608, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7gntt"]
gradient = SubResource("Gradient_6xkpw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sb6ao"]
emission_shape = 3
emission_box_extents = Vector3(54.36, 1, 1)
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
gravity = Vector3(0, -50, 0)
initial_velocity_min = 15.0
initial_velocity_max = 20.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.4
scale_max = 0.6
color_ramp = SubResource("GradientTexture1D_7gntt")

[node name="player" type="CharacterBody2D" groups=["player"]]
process_mode = 1
collision_mask = 14
script = ExtResource("1_oqx68")
run_speed = 750
jump_speed = 1200
gravity = 2000
life = 3
dash_speed = 6.0
dash_length = 0.1

[node name="image" type="Sprite2D" parent="."]
texture = ExtResource("2_sbhjv")
hframes = 29
frame = 7

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "dash"
libraries = {
"": SubResource("AnimationLibrary_ahpo3")
}

[node name="Camera2D" type="Camera2D" parent="."]

[node name="dashTimer" type="Timer" parent="."]

[node name="arrowPointer" type="Sprite2D" parent="."]
position = Vector2(0, 16.67)
texture = ExtResource("4_f8dh2")
hframes = 3

[node name="animationPointer" type="AnimationPlayer" parent="."]
autoplay = "pointer"
libraries = {
"": SubResource("AnimationLibrary_c0oou")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 20.5)
shape = SubResource("RectangleShape2D_ipqkr")

[node name="dashAnimationTimer" type="Timer" parent="." groups=["player"]]
wait_time = 0.4

[node name="CPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 65.57)
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_sb6ao")
texture = ExtResource("2_ss3ku")

[node name="walkParticles" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(1, 51)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_sb6ao")
texture = ExtResource("5_k7h10")
lifetime = 2.0

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_og40d")

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dashAnimationTimer" to="." method="_on_dash_animation_timer_timeout"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_dead_timer_timeout"]
